--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
   </issueManagement>
 
   <scm>
-    <connection>scm:git:http://git-wip-us.apache.org/repos/asf/commons-rng.git</connection>
-    <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/commons-rng.git</developerConnection>
-    <url>https://git-wip-us.apache.org/repos/asf?p=commons-rng.git</url>
+    <connection>scm:git:http://gitbox.apache.org/repos/asf/commons-rng.git</connection>
+    <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/commons-rng.git</developerConnection>
+    <url>https://gitbox.apache.org/repos/asf?p=commons-rng.git</url>
   </scm>
 
   <distributionManagement>
