--- a/commons-rng-examples/examples-jmh/pom.xml
+++ b/commons-rng-examples/examples-jmh/pom.xml
@@ -67,9 +67,10 @@
     <!-- Workaround to avoid duplicating config files. -->
     <rng.parent.dir>${basedir}/../..</rng.parent.dir>
 
-    <!-- JMH Benchmark related properties, version, target compiler and name of the benchmarking uber jar. -->
+    <!-- JMH Benchmark related properties: version, name of the benchmarking uber jar. -->
     <jmh.version>1.13</jmh.version>
     <uberjar.name>benchmarks</uberjar.name>
+    <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
   </properties>
 
   <profiles>
@@ -86,7 +87,6 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.1</version>
             <configuration>
               <compilerVersion>${maven.compiler.target}</compilerVersion>
               <source>${maven.compiler.target}</source>
@@ -96,6 +96,7 @@
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>exec-maven-plugin</artifactId>
+            <version>${exec-maven-plugin.version}</version>
             <executions>
               <execution>
                 <id>benchmark</id>
