--- a/commons-rng-examples/examples-stress/pom.xml
+++ b/commons-rng-examples/examples-stress/pom.xml
@@ -102,6 +102,44 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>bridge</id>
+      <properties>
+        <skipTests>true</skipTests>
+        <java.cmd>java</java.cmd>
+      </properties>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>benchmark</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <classpathScope>test</classpathScope>
+                  <executable>${java.cmd}</executable>
+                  <arguments>
+                    <argument>-classpath</argument>
+                    <classpath/>
+                    <argument>org.apache.commons.rng.examples.stress.BridgeTester</argument>
+                    <argument>target/bridge</argument>
+                    <argument>./stdin2testu01</argument>
+                    <argument>stdout</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 
 </project>
