--- a/commons-rng-examples/pom.xml
+++ b/commons-rng-examples/pom.xml
@@ -69,6 +69,12 @@
         <artifactId>commons-rng-client-api</artifactId>
         <version>1.3-SNAPSHOT</version>
       </dependency>
+
+      <dependency>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
