--- a/dist-archive/pom.xml
+++ b/dist-archive/pom.xml
@@ -17,20 +17,18 @@ KIND, either express or implied.  See the License for the
 specific language governing permissions and limitations
 under the License.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.apache.commons</groupId>
     <artifactId>commons-rng-parent</artifactId>
-    <version>1.3-SNAPSHOT</version>
+    <version>1.4-SNAPSHOT</version>
   </parent>
 
   <groupId>org.apache.commons</groupId>
   <artifactId>commons-rng</artifactId>
-  <version>1.3-SNAPSHOT</version>
+  <version>1.4-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Commons RNG (full distribution)</name>
   <description>This module creates the Apache Commons RNG distribution.</description>
@@ -70,18 +68,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-client-api</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -89,18 +87,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-core</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -108,18 +106,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-simple</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -127,18 +125,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-sampling</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -146,18 +144,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jmh</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jmh</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jmh</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -165,35 +163,35 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-app</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-app</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-app</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-lib</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-lib</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-jpms-lib</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -201,18 +199,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-quadrature</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-quadrature</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-quadrature</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -220,18 +218,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-sampling</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-sampling</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-sampling</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
@@ -239,18 +237,18 @@ under the License.
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-stress</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-stress</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>sources</classifier>
         </dependency>
         <dependency>
           <groupId>org.apache.commons</groupId>
           <artifactId>commons-rng-examples-stress</artifactId>
-          <version>1.3-SNAPSHOT</version>
+          <version>1.4-SNAPSHOT</version>
           <classifier>javadoc</classifier>
         </dependency>
 
